examples/force-app/main/default/objects/Opportunity/fields/LastReadinessCalc__c.field-meta.xml
<CustomField>
    <fullName>LastReadinessCalc__c</fullName>
    <label>Last Readiness Calc</label>
    <type>DateTime</type>
</CustomField>