examples/force-app/main/default/objects/Opportunity/fields/RenewalReadinessStatus__c.field-meta.xml
<CustomField>
    <fullName>RenewalReadinessStatus__c</fullName>
    <label>Renewal Readiness Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>